--- a/views/index.html
+++ b/views/index.html
@@ -21,9 +21,9 @@
 				<button class = "navButton navElement" id = "addTaskButton">Add Task</button>
 				<h1 class = "navHeader navElement">Task Manager</h1>
 				<div class = "sizeButtons navElement">
-					<img src = "../media/circle-xmark-regular.svg" class = "navButton navElement" id = "closeWindowButton"/>
-					<button class = "navButton navElement" id = "">Minimize</button>
-					<button class = "navButton navElement" id = "">Fullscreen</button>
+					<button  class = "navElement" id = "closeWindowButton">Close</button>
+					<button class = "navElement" id = "fullscreenWindowButton">Maximize</button>
+					<button class = "navElement" id = "minimizeWindowButton">Minimize</button>
 				</div>
 			</nav>
 		</center>
