EDITED STYLING FOR TITLEBAR

--- a/views/index.html
+++ b/views/index.html
@@ -16,16 +16,23 @@
 </head>
 <body>
 	<section id = "mainWindow">
-		<center>
+		<!-- <center> -->
 			<nav>
-				<button class = "navButton navElement" id = "addTaskButton">Add Task</button>
 				<h1 class = "navHeader navElement">Task Manager</h1>
 				<div class = "sizeButtons navElement">
-					<button  class = "navElement" id = "closeWindowButton">Close</button>
-					<button class = "navElement" id = "fullscreenWindowButton">Maximize</button>
-					<button class = "navElement" id = "minimizeWindowButton">Minimize</button>
+					<div id = "fullscreenWindowButton">
+					</div>
+
+					<div id = "minimizeWindowButton">
+					</div>
+
+					<div id = "closeWindowButton">
+					</div>
 				</div>
 			</nav>
+			<div id = "functions_div">
+				<button class = "navButton navElement" id = "addTaskButton">Add Task</button>
+			</div>
 		</center>
 	</section>
 </body>
