--- a/css/index.css
+++ b/css/index.css
@@ -9,14 +9,22 @@
 }
 
 ::-webkit-scrollbar {
-    display: none;
+	opacity: 0;
+	width: 0;
+	height: 0;
 }
 
 #mainWindow {
-	border-radius: 12px;
-	width: 100vw;
-	height: 100vh;
-	background-color: rgb(26, 31, 36);
+	display: inline-block;
+	width: calc(100vw - 8px);
+	height: calc(100vh - 8px);
+	background-color: rgb(7, 9, 14);
+	border: 4px solid rgb(0, 14, 51);
+	overflow: hidden;
+}
+
+body {
+	background-color: rgba(0, 0, 0, 0);
 }
 
 * {
@@ -26,13 +34,14 @@
 
 nav {
 	position: fixed;
-	width: 100%;
+	width: 99vw;
 	-webkit-app-region: drag;
 	color: whitesmoke;
-	background-color: rgb(15, 19, 24);
-	border-radius: 11px 11px 0 0;
-	min-height: calc(4vh + 4vw);
+	background-color: rgb(3, 3, 3);
+	/* border-radius: 11px 11px 0 0; */
+	padding: 20px 0;
 	white-space: nowrap;
+	max-height: 10px;
 }
 
 nav > .navElement {
@@ -43,11 +52,11 @@ nav > .navHeader {
 	font-family: montserrat;
 	font-variation-settings: "wght" 175;
 	font-variant: small-caps;
-	font-size: calc(2vh + 2vw);
+	font-size: 22px;
 	position: absolute;
 	top: 50%;
-	left: 50%;
-	transform: translateY(-50%) translateX(-50%) scaleX(1.4);
+	/* left: 50%; */
+	transform: translateY(-50%) translateX(25%) scaleX(1.4);
 	cursor: default;
 }
 
@@ -55,9 +64,9 @@ nav > .navHeader::selection {
 	background-color: transparent;
 }
 
-nav > .navButton {
+#addTaskButton {
 	-webkit-app-region: no-drag;
-	min-width: calc(4vh + 4vw);
+	min-width: calc(4vh + 6vw);
 	background-color: transparent;
 	border-radius: 8px;
 	padding: 6px 14px;
@@ -65,9 +74,6 @@ nav > .navButton {
 	font-variation-settings: "wght" 475;
 	font-size: 20px;
 	cursor: pointer;
-}
-
-nav > #addTaskButton {
 	position: absolute;
 	left: 1.25vw;
 	top: 50%;
@@ -77,50 +83,89 @@ nav > #addTaskButton {
 	transition: 0.3s;
 }
 
-nav > #addTaskButton:hover {
+#addTaskButton:hover {
 	background-color: rgb(70, 97, 255);
 	color: white;
+}
+
+nav > .sizeButtons {
+	position: absolute;
+	top: 50%;
+	right: 0;
+	transform: translateY(-50%);
 }
 
 nav > .sizeButtons > * {
 	-webkit-app-region: no-drag;
 	cursor: pointer;
+	margin: 0 2px;
+	display: inline-block;
 }
 
 nav > .sizeButtons > #closeWindowButton {
-	position: absolute;
-	right: 1.25vw;
-	top: 50%;
-	font-size: 15px;
-	transform: translateY(-50%);
-	transition: 0.3s;
-	background-color: transparent;
-	color: white;
-	border: 2px solid red;
-	padding: 2px 10px;
-	border-radius: 8px;
+	min-width: 12px;
+	min-height: 12px;
+	/* font-size: 10px; */
+	transition: 0.5s;
+	/* background-color: transparent; */
+	/* color: white; */
+	/* border: 2px solid transparent; */
+	border-radius: 50%;
+	/* transform-origin: center; */
+	/* transform: scale(0.8); */
+	/* color: white; */
+	background-color: rgb(189, 0, 0);
+	/* background-color: green; */
+	/* text-align: center; */
+	cursor: pointer;
+	margin: 0 4px 0 2px;
 }
+/* 
+nav > .sizeButtons > #closeWindowButton > button {
+	cursor: pointer;
+	border: none;
+	background-color: transparent;
+} */
 
 nav > .sizeButtons > #closeWindowButton:hover {
-	color: black;
-	filter: invert(1);
+	background-color: crimson;
 }
 
 nav > .sizeButtons > #fullscreenWindowButton {
-	position: absolute;
-	right: 10vw;
-	top: 50%;
-	transform: translateY(-50%);
+	min-width: 12px;
+	min-height: 12px;
 	transition: 0.3s;
-	font-size: 15px;
-	background-color: transparent;
-	color: white;
-	border: 2px solid red;
-	padding: 2px 10px;
-	border-radius: 8px;
+	/* font-size: 15px; */
+	/* background-color: green; */
+	/* color: white; */
+	/* border: 2px solid transparent; */
+	/* padding: 2px 10px; */
+	border-radius: 50%;
+	/* letter-spacing: -2px; */
+	/* transform: scaleY(1.2); */
+	background-color: rgb(0, 156, 0);
 }
 
 nav > .sizeButtons > #fullscreenWindowButton:hover {
-	color: black;
+	/* color: rgb(70, 97, 255); */
 	filter: invert(1);
+}
+
+nav > .sizeButtons > #minimizeWindowButton {
+	min-width: 12px;
+	min-height: 12px;
+	transition: 0.3s;
+	/* font-size: 15px; */
+	/* background-color: green; */
+	/* color: white; */
+	/* border: 2px solid transparent; */
+	/* padding: 2px 10px; */
+	border-radius: 50%;
+	/* letter-spacing: -2px; */
+	/* transform: scaleY(1.2); */
+	background-color: rgb(196, 183, 0);
+}
+
+nav > .sizeButtons > #minimizeWindowButton:hover {
+	color: rgb(70, 97, 255);
 }
